feat: Extend TileObjectType to expose additionalMovementCost, and heightMovementPenaltyMitigation for each direction, expressed as an Enum; refactor Character, ImageAssetSet, and TileWallSegment classes to use that enum